--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <!-- Main Dashboard row -->
                 <div class="row row-cols-1 row-cols-lg-2">
                     <!-- Left column -->
-                    <div class="col">
+                    <div class="col-lg-8 pe-lg-0">
                         <!-- Left container -->
-                        <div class="container">
+                        <div class="container pe-lg-1">
                             <!-- Table -->
                             <div class="card my-3">
                                 <!-- Table title -->
@@ -170,8 +170,46 @@
                     <!-- /Left column -->
 
                     <!-- Right column -->
-                    <div class="col">
+                    <div class="col-lg-4 ps-lg-0">
+                        <!-- Right container -->
+                        <div class="container">
+                            <!-- TODO list card-->
+                            <div class="card my-3">
+                                <!-- TODO list title -->
+                                <h3 class="card-header">
+                                    TODO
+                                </h3>
+                                 <!-- /TODO list title -->
+                                <div class="card-body">
+                                    <!-- Check list group-->
+                                    <ul class="list-group">
+                                        <!-- list item -->
+                                        <li class="list-group-item">
+                                            <input type="checkbox" class="form-check-input">
+                                            <label>Kickoff nuove classi</label>
+                                        </li>
+                                        <!-- /list item -->
 
+                                        <!-- list item -->
+                                        <li class="list-group-item">
+                                            <input type="checkbox" class="form-check-input">
+                                            <label>Lezione su Bootstrap 5 in classe #75</label>
+                                        </li>
+                                        <!-- /list item -->
+
+                                        <!-- list item -->
+                                        <li class="list-group-item">
+                                            <input type="checkbox" class="form-check-input">
+                                            <label>Controllare username github studenti</label>
+                                        </li>
+                                        <!-- /list item -->
+                                    </ul>
+                                    <!-- /Check list group-->
+                                </div>
+                            </div>
+                            <!-- /TODO list card-->
+                        </div>
+                        <!-- /Right container -->
                     </div>
                     <!-- /Right column -->
                 </div>
