add: active users graph

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 <h3 class="card-header">
                                     TODO
                                 </h3>
-                                 <!-- /TODO list title -->
+                                <!-- /TODO list title -->
                                 <div class="card-body">
                                     <!-- Check list group-->
                                     <ul class="list-group">
@@ -208,6 +208,62 @@
                                 </div>
                             </div>
                             <!-- /TODO list card-->
+
+                            <!-- Graph external card -->
+                            <div class="card p-2">
+                                <!-- Graph internal card -->
+                                <div class="card">
+                                    <!-- image top card -->
+                                    <img src="img/stats.jpeg" class="card-img-top" alt="Stats">
+                                    <!-- /image top card -->
+
+                                    <!-- Card body -->
+                                    <div class="card-body p-0">
+                                        <!-- Card title -->
+                                        <h5 class="card-title px-3">
+                                            Utenti Attivi
+                                        </h5>
+                                        <!-- /Card title -->
+                                    </div>
+                                    <!-- Card subtitle -->
+                                    <p class="card-subtitle px-3">
+                                        Lista degli utenti attivi in piattaforma nell'ultimo mese
+                                    </p>
+                                    <!-- /Card subtitle -->
+
+                                    <!-- Active users list -->
+                                    <ul class="list-group list-group-flush">
+                                        <!-- January -->
+                                        <li class="list-group-item">
+                                            Gennaio: 1200
+                                        </li>
+
+                                        <!-- February -->
+                                        <li class="list-group-item">
+                                            Febbraio: 800
+                                        </li>
+
+                                        <!-- March -->
+                                        <li class="list-group-item">
+                                            Marzo: 1500
+                                        </li>
+                                    </ul>
+                                    <!-- /Active users list -->
+
+
+                                    <!-- Report link -->
+                                    <div class="card-body">
+                                       <a href="" class="card-link">Visualizza report approfondito</a> 
+                                    </div>
+                                    
+                                    <!-- /Report link -->
+
+                                    <!-- /Card body -->
+                                </div>
+                                <!-- /Graph internal card -->
+                            </div>
+                            <!-- /Graph external card -->
+
                         </div>
                         <!-- /Right container -->
                     </div>
