add: table data

--- a/index.html
+++ b/index.html
@@ -389,27 +389,215 @@
 
                                                             Classe 75
                                                         </td>
-
                                                         <!-- Start Date -->
                                                         <td class="d-none d-md-table-cell">
                                                             15 Feb 2021
                                                         </td>
-
                                                         <!-- ROI -->
                                                         <td class="d-none d-md-table-cell">
                                                             20%
                                                         </td>
-
                                                         <!-- State -->
                                                         <td>
                                                             <span class="badge bg-success">Done</span>
                                                         </td>
-
                                                         <!-- Actions -->
                                                         <td>
                                                             <i
                                                                 class="fa-solid fa-pencil border border-dark rounded p-2"></i>
+                                                            <i
+                                                                class="fa-solid fa-trash border border-dark rounded p-2"></i>
+                                                        </td>
+                                                    </tr>
 
+                                                    <tr>
+                                                        <!-- Name -->
+                                                        <td>
+                                                            <img src="img/class-avatar.jpg" alt="">
+                                                            Classe 76
+                                                        </td>
+                                                        <!-- Start Date -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            16 Feb 2021
+                                                        </td>
+                                                        <!-- ROI -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            20%
+                                                        </td>
+                                                        <!-- State -->
+                                                        <td>
+                                                            <span class="badge bg-success">Done</span>
+                                                        </td>
+                                                        <!-- Actions -->
+                                                        <td>
+                                                            <i
+                                                                class="fa-solid fa-pencil border border-dark rounded p-2"></i>
+                                                            <i
+                                                                class="fa-solid fa-trash border border-dark rounded p-2"></i>
+                                                        </td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <!-- Name -->
+                                                        <td>
+                                                            <img src="img/class-avatar.jpg" alt="">
+                                                            Classe 77
+                                                        </td>
+                                                        <!-- Start Date -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            17 Feb 2021
+                                                        </td>
+                                                        <!-- ROI -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            20%
+                                                        </td>
+                                                        <!-- State -->
+                                                        <td>
+                                                            <span class="badge bg-warning">Process</span>
+                                                        </td>
+                                                        <!-- Actions -->
+                                                        <td>
+                                                            <i
+                                                                class="fa-solid fa-pencil border border-dark rounded p-2"></i>
+                                                            <i
+                                                                class="fa-solid fa-trash border border-dark rounded p-2"></i>
+                                                        </td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <!-- Name -->
+                                                        <td>
+                                                            <img src="img/class-avatar.jpg" alt="">
+                                                            Classe 78
+                                                        </td>
+                                                        <!-- Start Date -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            18 Feb 2021
+                                                        </td>
+                                                        <!-- ROI -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            20%
+                                                        </td>
+                                                        <!-- State -->
+                                                        <td>
+                                                            <span class="badge bg-success">Done</span>
+                                                        </td>
+                                                        <!-- Actions -->
+                                                        <td>
+                                                            <i
+                                                                class="fa-solid fa-pencil border border-dark rounded p-2"></i>
+                                                            <i
+                                                                class="fa-solid fa-trash border border-dark rounded p-2"></i>
+                                                        </td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <!-- Name -->
+                                                        <td>
+                                                            <img src="img/class-avatar.jpg" alt="">
+
+                                                            Classe 79
+                                                        </td>
+                                                        <!-- Start Date -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            19 Feb 2021
+                                                        </td>
+                                                        <!-- ROI -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            20%
+                                                        </td>
+                                                        <!-- State -->
+                                                        <td>
+                                                            <span class="badge bg-danger">failed</span>
+                                                        </td>
+                                                        <!-- Actions -->
+                                                        <td>
+                                                            <i
+                                                                class="fa-solid fa-pencil border border-dark rounded p-2"></i>
+                                                            <i
+                                                                class="fa-solid fa-trash border border-dark rounded p-2"></i>
+                                                        </td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <!-- Name -->
+                                                        <td>
+                                                            <img src="img/class-avatar.jpg" alt="">
+
+                                                            Classe 80
+                                                        </td>
+                                                        <!-- Start Date -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            20 Feb 2021
+                                                        </td>
+                                                        <!-- ROI -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            20%
+                                                        </td>
+                                                        <!-- State -->
+                                                        <td>
+                                                            <span class="badge bg-success">Done</span>
+                                                        </td>
+                                                        <!-- Actions -->
+                                                        <td>
+                                                            <i
+                                                                class="fa-solid fa-pencil border border-dark rounded p-2"></i>
+                                                            <i
+                                                                class="fa-solid fa-trash border border-dark rounded p-2"></i>
+                                                        </td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <!-- Name -->
+                                                        <td>
+                                                            <img src="img/class-avatar.jpg" alt="">
+
+                                                            Classe 81
+                                                        </td>
+                                                        <!-- Start Date -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            21 Feb 2021
+                                                        </td>
+                                                        <!-- ROI -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            20%
+                                                        </td>
+                                                        <!-- State -->
+                                                        <td>
+                                                            <span class="badge bg-danger">failed</span>
+                                                        </td>
+                                                        <!-- Actions -->
+                                                        <td>
+                                                            <i
+                                                                class="fa-solid fa-pencil border border-dark rounded p-2"></i>
+                                                            <i
+                                                                class="fa-solid fa-trash border border-dark rounded p-2"></i>
+                                                        </td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <!-- Name -->
+                                                        <td>
+                                                            <img src="img/class-avatar.jpg" alt="">
+
+                                                            Classe 82
+                                                        </td>
+                                                        <!-- Start Date -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            22 Feb 2021
+                                                        </td>
+                                                        <!-- ROI -->
+                                                        <td class="d-none d-md-table-cell">
+                                                            20%
+                                                        </td>
+                                                        <!-- State -->
+                                                        <td>
+                                                            <span class="badge bg-success">Done</span>
+                                                        </td>
+                                                        <!-- Actions -->
+                                                        <td>
+                                                            <i
+                                                                class="fa-solid fa-pencil border border-dark rounded p-2"></i>
                                                             <i
                                                                 class="fa-solid fa-trash border border-dark rounded p-2"></i>
                                                         </td>
