--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- Container -->
             <div class="container-fluid">
                 <!-- Row -->
-                <div class="row d-flex">
+                <div class="row d-flex flex-nowrap">
                     <!-- Logo -->
                     <div class="col-auto me-2">
                         <img class="d-lg-none logo-mobile" src="img/mobile-logo.png" alt="Logo">
@@ -43,7 +43,7 @@
                     <!-- Search bar -->
 
                     <!-- Action buttons -->
-                    <div class="col-auto align-self-center">
+                    <div class="col-auto align-self-center p-0">
                         <!-- Action buttons list -->
                         <ul class="list-unstyled d-flex m-0">
                             <!-- list -->
@@ -366,8 +366,6 @@
                                         </h3>
 
                                         <div class="card-body">
-
-
                                             <table class="table">
                                                 <!-- table head -->
                                                 <thead>
@@ -605,7 +603,6 @@
                                                 </tbody>
                                             </table>
                                         </div>
-
                                     </div>
                                     <!-- /Table -->
 
