fix: Main dashboard

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                             <!-- Left column -->
                             <div class="col-lg-8 pe-lg-0">
                                 <!-- Table -->
-                                <div class="card my-3">
+                                <div class="card my-3 mx-3">
                                     <!-- Table title -->
                                     <h3 class="card-header">
                                         Prossime classi
@@ -597,7 +597,7 @@
                                 <!-- /Table -->
 
                                 <!-- FAQ -->
-                                <div class="card my-3">
+                                <div class="card my-3 mx-3">
                                     <!-- Title -->
 
                                     <h3 class="card-header">F.A.Q.</h3>
@@ -657,7 +657,7 @@
                             <!-- Right column -->
                             <div class="col-lg-4 p-lg-0">
                                 <!-- TODO list card-->
-                                <div class="card my-3">
+                                <div class="card my-3 mx-2">
                                     <!-- TODO list title -->
                                     <h3 class="card-header">
                                         Todo
@@ -693,7 +693,7 @@
                                 <!-- /TODO list card-->
 
                                 <!-- Graph external card -->
-                                <div class="card p-2">
+                                <div class="card p-2 mx-2">
                                     <!-- Graph internal card -->
                                     <div class="card">
                                         <!-- image top card -->
