--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                                         <label>Email</label>
                                                         <div class="input-group flex-nowrap w-100">
                                                             <span
-                                                                class="border ms_border-color rounded-start px-2 bg-offcanvas-input">@</span>
+                                                                class="border ms_border-color rounded-start px-2 ms_bg-offcanvas-input">@</span>
                                                             <input type="text"
                                                                 class="w-100 border ms_border-color rounded-end">
                                                         </div>
@@ -668,22 +668,28 @@
                                         <ul class="list-group">
                                             <!-- list item -->
                                             <li class="list-group-item">
-                                                <input type="checkbox" class="form-check-input">
-                                                <label>Kickoff nuove classi</label>
+                                                <label for="todo1">
+                                                    <input type="checkbox" class="form-check-input me-1" id="todo1">
+                                                Kickoff nuove classi
+                                            </label>
                                             </li>
                                             <!-- /list item -->
 
                                             <!-- list item -->
                                             <li class="list-group-item">
-                                                <input type="checkbox" class="form-check-input">
-                                                <label>Lezione su Bootstrap 5 in classe #75</label>
+                                                <label for="todo2">
+                                                    <input type="checkbox" class="form-check-input me-1" id="todo2">
+                                                Lezione su Bootstrap 5 in classe #75
+                                            </label>
                                             </li>
                                             <!-- /list item -->
 
                                             <!-- list item -->
                                             <li class="list-group-item">
-                                                <input type="checkbox" class="form-check-input">
-                                                <label>Controllare username github studenti</label>
+                                                <label for="todo3">
+                                                    <input type="checkbox" class="form-check-input me-1" id="todo3">
+                                                Controllare username github studenti
+                                            </label>
                                             </li>
                                             <!-- /list item -->
                                         </ul>
