--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <!-- Sidebar acton buttons -->
                     <ul class="list-unstyled text-center">
                         <!-- Home -->
-                        <li class="my-1">
+                        <li class="my-1 pt-2">
                             <a href="" class="link-light text-decoration-none">
                                 <i class="fa-solid fa-house"></i>
                                 <span class="d-none d-lg-inline">Home</span>
@@ -122,7 +122,7 @@
                         <!-- /Home -->
 
                         <!-- Stats -->
-                        <li class="my-1">
+                        <li class="my-1 pt-2">
                             <a href="" class="link-light text-decoration-none">
                                 <i class="fa-solid fa-chart-simple"></i>
                                 <span class="d-none d-lg-inline">Stats</span>
@@ -131,7 +131,7 @@
                         <!-- /Stats -->
 
                         <!-- Signals -->
-                        <li class="my-1">
+                        <li class="my-1 pt-2">
                             <a href="" class="link-light text-decoration-none">
                                 <i class="fa-solid fa-signal"></i>
                                 <span class="d-none d-lg-inline">Signals</span>
@@ -146,7 +146,7 @@
                 <div class="admin text-center">
                     <ul class="list-unstyled text-center">
                         <!-- Admin action button -->
-                        <li class="my-1">
+                        <li class="my-1 pt-2">
                             <a href="" class="link-light text-decoration-none">
                                 <i class="fa-solid fa-gear"></i>
                                 <span class="d-none d-lg-inline">Admin</span>
