--- a/index.html
+++ b/index.html
@@ -182,136 +182,112 @@
                                         <h5 id="offcanvasRightLabel">Inserisci un nuovo studente</h5>
                                         <!-- /Offcanvas Title -->
 
-                                        <!-- Close buttons -->
+                                        <!-- Close button -->
                                         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                                             aria-label="Close"></button>
-                                        <!-- /Close buttons -->
+                                        <!-- /Close button -->
                                     </div>
                                     <!-- Offcanvas body -->
                                     <div class="offcanvas-body p-0">
                                         <!-- Container offcanvas form -->
-                                        <div class="container-fluid">
-                                            <!-- First row -->
-                                            <div class="row g-2">
-                                                <!-- First column -->
-                                                <div class="col-6">
-                                                    <div class="input-group">
-                                                        <!-- Name -->
-                                                        <label>Nome</label>
-                                                        <input type="text" class="w-100 border ms_border-color rounded">
-                                                        <!-- /Name -->
+                                        <div class="container">
+                                            <form class="row g-3">
+                                                <!-- Offcanvas Name input -->
+                                                <div class="col-md-6">
+                                                    <label for="name" class="form-label">Nome</label>
+                                                    <input type="text" class="form-control" id="name">
+                                                </div>
+                                                <!-- /Offcanvas Name input -->
 
-                                                        <!-- Email -->
-                                                        <label>Email</label>
-                                                        <div class="input-group flex-nowrap w-100">
-                                                            <span
-                                                                class="border ms_border-color rounded-start px-2 ms_bg-offcanvas-input">@</span>
-                                                            <input type="text"
-                                                                class="w-100 border ms_border-color rounded-end">
-                                                        </div>
-                                                        <!-- /Email -->
-
-                                                        <!-- Email repet -->
-                                                        <label>Indirizzo Email</label>
-                                                        <div class="input-group flex-nowrap w-100">
-                                                            <span
-                                                                class="border ms_border-color rounded-start px-2">@</span>
-                                                            <input type="text"
-                                                                class="w-100 border ms_border-color rounded-end">
-                                                        </div>
-                                                        <!-- /Email repet -->
+                                                <!-- Offcanvas Surname input -->
+                                                <div class="col-md-6">
+                                                    <label for="surname" class="form-label">Cognome</label>
+                                                    <input type="text" class="form-control" id="surname">
+                                                </div>
+                                                <!-- /Offcanvas Surname input -->
+                                                <!-- Offcanvas Email input -->
+                                                <div class="col-md-6">
+                                                    <label for="inputEmail1" class="form-label">Email</label>
+                                                    <div class="input-group flex-nowrap">
+                                                        <span class="input-group-text" id="addon-wrapping">@</span>
+                                                        <input type="text" class="form-control" id="inputEmail1">
                                                     </div>
                                                 </div>
-                                                <!-- /First column -->
-
-                                                <!-- Second column -->
-                                                <div class="col-6">
-                                                    <div class="input-group">
-                                                        <!-- Surname -->
-                                                        <label>Cognome</label>
-                                                        <input type="text" class="w-100 border ms_border-color rounded">
-                                                        <!-- /Surname -->
-
-                                                        <!-- Password -->
-                                                        <label>Password</label>
-                                                        <input type="password"
-                                                            class="w-100 border ms_border-color rounded">
-                                                        <!-- /Password -->
-
-                                                        <!-- Password repet -->
-                                                        <label>Password</label>
-                                                        <input type="password"
-                                                            class="w-100 border ms_border-color rounded">
-                                                        <!-- /Password repet -->
+                                                <!-- /Offcanvas Email input -->
+                                                <!-- Offcanvas Password input -->
+                                                <div class="col-md-6">
+                                                    <label for="inputPassword1" class="form-label">Password</label>
+                                                    <input type="password" class="form-control" id="inputPassword1">
+                                                </div>
+                                                <!-- /Offcanvas Password input -->
+                                                <!-- Offcanvas Email input -->
+                                                <div class="col-md-6">
+                                                    <label for="inputEmail2" class="form-label">Email</label>
+                                                    <div class="input-group flex-nowrap">
+                                                        <span class="input-group-text" id="addon-wrapping">@</span>
+                                                        <input type="text" class="form-control" id="inputEmail2">
                                                     </div>
                                                 </div>
-                                                <!-- /Second column -->
-                                            </div>
-                                            <!-- /First row -->
-
-                                            <!-- Second row -->
-                                            <div class="row">
-                                                <div class="col-12 p-0">
-                                                    <!-- Address -->
-                                                    <label class="d-block">Indirizzo</label>
-                                                    <input type="text" class="w-100 border ms_border-color rounded">
-                                                    <!-- /Address -->
+                                                <!-- /Offcanvas Email input -->
+                                                <!-- Offcanvas Password input -->
+                                                <div class="col-md-6">
+                                                    <label for="inputPassword2" class="form-label">Password</label>
+                                                    <input type="password" class="form-control" id="inputPassword2">
                                                 </div>
-                                            </div>
-                                            <!-- /Second row -->
-
-                                            <!-- Third row -->
-                                            <div class="row">
-                                                <!-- City -->
-                                                <div class="col-5 p-0">
-                                                    <label class="">Città</label>
-                                                    <input type="text" class="w-100 border ms_border-color rounded">
+                                                <!-- /Offcanvas Password input -->
+                                                <!-- Offcanvas Address input -->
+                                                <div class="col-12">
+                                                    <label for="inputAddress" class="form-label">Indirizzo</label>
+                                                    <input type="text" class="form-control" id="inputAddress">
                                                 </div>
-                                                <!-- /City -->
-
-                                                <!-- State -->
-                                                <div class="col-4">
-                                                    <label class="">Stato</label>
-                                                    <select class="w-100 border ms_border-color rounded">
-                                                        <option class=""></option>
-                                                        <option value="1">Afghanistan</option>
-                                                        <option value="2">Armenia</option>
-                                                        <option value="3">Azerbaijan</option>
+                                                <!-- /Offcanvas Address input -->
+                                                <!-- Offcanvas City input -->
+                                                <div class="col-md-6">
+                                                    <label for="inputCity" class="form-label">Città</label>
+                                                    <input type="text" class="form-control" id="inputCity">
+                                                </div>
+                                                <!-- /Offcanvas City input -->
+                                                <!-- Offcanvas State input -->
+                                                <div class="col-md-4">
+                                                    <label for="inputState" class="form-label">Stato</label>
+                                                    <select id="inputState" class="form-select">
+                                                        <option selected></option>
+                                                        <option>Afghanistan</option>
+                                                        <option>Andorra</option>
+                                                        <option>Armenia</option>
+                                                        <option>Azerbaijan</option>
                                                     </select>
                                                 </div>
-                                                <!-- /State -->
-
-                                                <!-- C.a.p. -->
-                                                <div class="col-3 p-0">
-                                                    <label class="">C.a.p.</label>
-                                                    <input type="text" class="w-100 border ms_border-color rounded">
+                                                <!-- /Offcanvas State input -->
+                                                <!-- Offcanvas Zip code input -->
+                                                <div class="col-md-2">
+                                                    <label for="inputZip" class="form-label">C.a.p</label>
+                                                    <input type="text" class="form-control" id="inputZip">
                                                 </div>
-                                                <!-- /C.a.p. -->
-                                            </div>
-                                            <!-- /Third row -->
-
-                                            <!-- Forth row -->
-                                            <div class="row">
-                                                <!-- Photo -->
-                                                <div class="col p-0">
-                                                    <label>Foto</label>
-                                                    <input type="file" class="form-control">
+                                                <!-- /Offcanvas Zip code input -->
+                                                <!-- Offcanvas Photo input -->
+                                                <div class="mb-3">
+                                                    <label for="formFile" class="form-label">Foto</label>
+                                                    <input class="form-control" type="file" id="formFile">
                                                 </div>
-                                                <!-- /Photo -->
-
-                                                <!-- Select to continue -->
-                                                <label for="check" class="p-0 my-2">
-                                                    <input type="checkbox" class="me-2" id="check">
-                                                    Seleziona per proseguire
-                                                </label>
-                                                <!-- /Select to continue -->
-
-                                                <!-- Save and empty buttons -->
-                                                <button type="button" class="btn btn-primary me-2">Salva</button>
-                                                <button type="button" class="btn btn-warning">Svuota</button>
-                                                <!-- /Save and empty buttons -->
-                                            </div>
-                                            <!-- /Forth row -->
+                                                <!-- /Offcanvas Photo input -->
+                                                <!-- Offcanvas check-button -->
+                                                <div class="col-12">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                                                        <label class="form-check-label" for="gridCheck">
+                                                            Seleziona per proseguire
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                <!-- /Offcanvas check-button -->
+                                                <!-- Offcanvas Buttons (Save and Clear) -->
+                                                <div class="col-12">
+                                                    <button type="submit" class="btn btn-primary">Salva</button>
+                                                    <button type="submit" class="btn btn-warning">Svuota</button>
+                                                </div>
+                                                <!-- /Offcanvas Buttons (Save and Clear) -->
+                                            </form>
                                         </div>
                                         <!-- /Container offcanvas form -->
                                     </div>
@@ -670,8 +646,8 @@
                                             <li class="list-group-item">
                                                 <label for="todo1">
                                                     <input type="checkbox" class="form-check-input me-1" id="todo1">
-                                                Kickoff nuove classi
-                                            </label>
+                                                    Kickoff nuove classi
+                                                </label>
                                             </li>
                                             <!-- /list item -->
 
@@ -679,8 +655,8 @@
                                             <li class="list-group-item">
                                                 <label for="todo2">
                                                     <input type="checkbox" class="form-check-input me-1" id="todo2">
-                                                Lezione su Bootstrap 5 in classe #75
-                                            </label>
+                                                    Lezione su Bootstrap 5 in classe #75
+                                                </label>
                                             </li>
                                             <!-- /list item -->
 
@@ -688,8 +664,8 @@
                                             <li class="list-group-item">
                                                 <label for="todo3">
                                                     <input type="checkbox" class="form-check-input me-1" id="todo3">
-                                                Controllare username github studenti
-                                            </label>
+                                                    Controllare username github studenti
+                                                </label>
                                             </li>
                                             <!-- /list item -->
                                         </ul>
